# Flappy-Bird-Game

./: .cproject  .mtbqueryapi  .project  Makefile  README.md
.mtbLaunchConfigs/: LVGL_Demo Attach (KitProg3_MiniProg4).launch  LVGL_Demo Debug (KitProg3_MiniProg4).launch  LVGL_Demo Erase Device (KitProg3_MiniProg4).launch  LVGL_Demo Program (KitProg3_MiniProg4).launch
bsps/TARGET_APP_CY8CKIT-062S2-43012/config/: design.modus
flappyImages/: Flappy.pptx
source/: FreeRTOSConfig.h  capsense_task.c  capsense_task.h  game_task.c  game_task.h  led_task.c  led_task.h  lv_conf.h  main.c  tft_task.c
squareline/: CMakeLists.txt  filelist.txt  ui.c  ui.h
squareline/components/: ui_comp_hook.c
squareline/images/: ui_img_background_png.c  ui_img_flappy_png.c  ui_img_flappygametext_png.c  ui_img_flappyup_png.c  ui_img_pillard0_png.c  ui_img_pillard1_png.c  ui_img_pillard2_png.c  ui_img_pillaru0_png.c  ui_img_pillaru1_png.c  ui_img_pillaru2_png.c
squareline/screens/: ui_gameScreen.c
